<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/icon_login"
    tools:context=".activity.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/default_avatar"
        app:layout_constraintBottom_toTopOf="@id/llLoginView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <LinearLayout
        android:id="@+id/llLoginView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:alpha="0.5"
        android:background="@color/colorGray"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorGray2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@color/colorRed"
                android:padding="5dp"
                android:text="@string/desc_account"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorWhite"
                android:hint="@string/desc_input_account"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorGray2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@color/colorRed"
                android:padding="5dp"
                android:text="@string/desc_pwd"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorWhite"
                android:hint="@string/desc_input_pwd"
                android:inputType="numberPassword"
                android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@color/colorGray2"
                android:padding="10dp"
                android:text="@string/desc_register"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvForgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@color/colorGray2"
                android:padding="10dp"
                android:text="@string/desc_forget_pwd"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/shape_bg_button"
            android:text="@string/desc_login"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>