<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F5F5F5"
              android:orientation="vertical"
              tools:context=".activity.RegisterActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/llBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingRight="20dp"
                app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/icon_back"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/desc_login"
                    android:textColor="@color/colorBlue"
                    android:textSize="14sp"/>
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_register"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


    </android.support.constraint.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="35dp"
            android:layout_weight="1">

        <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_bg_et"
                android:hint="@string/desc_name"
                android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <EditText
                android:id="@+id/etRecommend"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_bg_et"
                android:hint="@string/desc_recommend"
                android:paddingLeft="10dp"/>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_bg_et"
                android:hint="@string/desc_input_phone"
                android:paddingLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:id="@+id/btnCode"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_bg_button"
                android:text="获取验证码"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <EditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_bg_et"
                android:hint="@string/desc_input_code"
                android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <EditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_bg_et"
                android:hint="@string/desc_input_pwd2"
                android:inputType="textPassword"
                android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1">

        <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@color/colorBlue"
                android:text="下一步"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"/>
    </LinearLayout>


</LinearLayout>